# Albor_RAN_rust

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.open5gs  add_subscriber.js  docker-compose.yml  entrypoint.sh  fix_and_test_srsran.sh  fix_open5gs_ports.py  mock_amf.py  open5gs.env  progress.md  quicktest.sh  quicktest.sh.bak  setup_network_loopback.sh  start_open5gs.sh  start_open5gs_simple.sh  subagent_instructions.txt  subagent_output.md  test_5g_final.sh  test_5g_sa_loopback.sh  test_5g_simple.sh  test_albor.sh  test_albor.sh.backup  test_cell_detection.sh  test_cell_detection_debug.sh  test_cell_detection_extended.sh  test_cell_detection_only.sh  test_comparison.sh  test_final_cell_detection.sh  test_ifft.rs  test_output.txt  test_simple_cell_detection.sh  test_srsran.sh  test_srsran_basic.sh  test_srsran_cell_detection.sh  test_srsran_compliant.sh  test_srsran_direct.sh  test_srsran_minimal.sh  (+14 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json
amf_workaround/: amf_workaround.conf  test_amf_connection.sh
common/: Cargo.toml
common/src/: lib.rs  types.rs  utils.rs
config/: test_5g_sa_setup.sh
config/albor_gnb/: gnb_albor.yml
config/documentation/: 5g_sa_setup.md
config/open5gs/: README.md  docker-compose-simple.yml  docker-compose.yml  docker-compose.yml.custom  mongo-init-script.js  simple-5gc.yml
config/open5gs/config/: amf.yaml
config/open5gs/configs/: amf.yaml
config/open5gs_native/: start_open5gs.sh
config/open5gs_native/config/: amf.yaml  amf_complete.yaml  amf_fixed.yaml  amf_simple.yaml  ausf.yaml  nrf.yaml  pcf.yaml  smf.yaml  udm.yaml  udr.yaml  upf.yaml
config/open5gs_workaround/: amf.yaml  ausf.yaml  bsf.yaml  hss.yaml  mme.yaml  nrf.yaml  nssf.yaml  pcf.yaml  pcrf.yaml  scp.yaml  sepp1.yaml  sepp2.yaml  sgwc.yaml  sgwu.yaml  smf.yaml  udm.yaml  udr.yaml  upf.yaml
config/srsran_gnb/: gnb_zmq.yml  gnb_zmq_10mhz.yml  gnb_zmq_localhost.yml  gnb_zmq_loopback.yml  gnb_zmq_loopback_correct.yml  gnb_zmq_loopback_fixed.yml  gnb_zmq_nocore.yml  srsran_minimal.yml  test_ini.conf  test_yaml.yml  test_yaml2.yml
config/srsue/: ue_nr_zmq.conf  ue_nr_zmq_10mhz.conf  ue_nr_zmq_fixed.conf  ue_nr_zmq_loopback.conf  ue_nr_zmq_minimal.conf  ue_zmq.conf
gnb/: Cargo.toml
gnb/src/: config.rs  main.rs
interfaces/: Cargo.toml
interfaces/flexran-sys/: Cargo.toml  build.rs
interfaces/flexran-sys/examples/: test_flexran.rs
interfaces/flexran-sys/src/: ffi.rs  flexran_wrapper.c  lib.rs
interfaces/src/: lib.rs  message_types.rs  zmq_handler.rs  zmq_rf.rs
layers/: Cargo.toml
layers/examples/: test_ofdm_backend.rs
layers/src/: lib.rs  ngap.rs  pdcp.rs  rlc.rs  rrc.rs
layers/src/mac/: mod.rs  scheduler.rs  sib1.rs
layers/src/phy/: dmrs.rs  flexran_adapter.rs  frame_structure.rs  ldpc.rs  mod.rs  ofdm.rs  ofdm_backend.rs  pbch.rs  pdcch.rs  pdsch.rs  polar.rs  prach.rs  pss_sss.rs  resampler.rs  resource_grid.rs
mongodb-data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-11408745058730124207.wt  collection-0-13390457784026719075.wt  collection-0-7831197431275240969.wt  collection-2-11408745058730124207.wt  collection-2-13390457784026719075.wt  collection-4-11408745058730124207.wt  collection-4-13390457784026719075.wt  index-1-11408745058730124207.wt  index-1-13390457784026719075.wt  index-1-7831197431275240969.wt  index-3-11408745058730124207.wt  index-3-13390457784026719075.wt  index-5-11408745058730124207.wt  index-5-13390457784026719075.wt  index-6-11408745058730124207.wt  index-6-13390457784026719075.wt  sizeStorer.wt
mongodb-data/diagnostic.data/: metrics.2025-06-24T08-48-05Z-00000  metrics.2025-06-24T10-36-05Z-00000  metrics.2025-06-24T11-16-08Z-00000  metrics.2025-06-25T08-22-04Z-00000  metrics.2025-06-25T08-25-08Z-00000  metrics.2025-06-25T08-40-54Z-00000  metrics.2025-06-25T08-56-13Z-00000  metrics.2025-06-25T12-23-41Z-00000  metrics.2025-06-26T06-37-21Z-00000  metrics.2025-06-26T09-42-55Z-00000  metrics.2025-06-26T09-54-30Z-00000  metrics.2025-06-26T09-55-01Z-00000  metrics.interim
scripts/: build_srsran_gnb.sh  check_and_setup_sctp.sh  docker_run_with_caps.sh  mock_amf.py  open5gs_workaround.sh  sctp_to_tcp_bridge.py  setup_amf_workaround.sh  setup_loopback_robust.sh  test_srsran_adaptive.sh  update_test_scripts.sh  verify_open5gs_config.sh
scripts/open5gs/: README_multiloopback.md  cleanup_and_restart.sh  configure-localhost.sh  deploy_open5gs_multiloopback.sh  setup_loopback_interfaces.sh  start-open5gs.sh  start_open5gs_core.sh  status-open5gs.sh  stop-open5gs.sh  update_open5gs_configs.sh
test_logs/test_20250622_222359/: ue_nr.conf
tests/: ue_zmq_nr.conf
