[workspace]
members = [
    "gnb",
    "layers",
    "interfaces",
    "common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Albor Space"]
license = "Proprietary"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# ZeroMQ for communication with reference UE
zmq = "0.10"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Byte handling
bytes = "1.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Additional useful libraries
futures = "0.3"
async-trait = "0.1"

# Numeric and DSP
num-complex = "0.4"
num-traits = "0.2"
num-derive = "0.4"
rustfft = "6.2"
ndarray = "0.16"

# Time handling
chrono = "0.4"

# Configuration
toml = "0.8"
config = "0.14"

# Command line parsing
clap = { version = "4.5", features = ["derive"] }

# Internal crates
gnb = { path = "gnb" }
layers = { path = "layers" }
interfaces = { path = "interfaces" }
common = { path = "common" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1