[package]
name = "interfaces"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
zmq.workspace = true
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
num-complex.workspace = true
num-traits.workspace = true
ndarray.workspace = true

# Internal crates
common.workspace = true