[package]
name = "layers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
tracing.workspace = true
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
num-complex.workspace = true
num-traits.workspace = true
num-derive.workspace = true
rustfft.workspace = true
ndarray.workspace = true
serde.workspace = true
bincode.workspace = true

# Internal crates
common.workspace = true
interfaces.workspace = true

# Additional dependencies for protocol implementation
bitflags = "2.6"
nom = "7.1"  # For parsing protocol messages
rand = "0.8"  # For scrambling sequences
fftw.workspace = true  # For high-performance FFT operations

# SCTP support for NGAP
# Using tokio for async networking with raw socket support
libc = "0.2"  # For SCTP raw socket support
sctp-rs = "0.3.1"  # Modern SCTP socket bindings

[features]
default = []
flexran = ["flexran-sys"]

[dependencies.flexran-sys]
path = "../interfaces/flexran-sys"
optional = true
